# Django_API_Dev

./: manage.py  pyproject.toml  pytest.ini  requirements.txt  test.http
Django_API_Dev/: settings.py  urls.py
ads/: models.py  permissions.py  validators.py
ads/migrations/: 0001_initial.py
ads/serializers/: ad.py  category.py  location.py  selection.py  users.py
ads/views/: ads.py  category.py  locations.py  selections.py  users.py
data/: ad.csv  category.csv
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  test_ads_one.py
tests/selections/: selection_create_test.py
